[gd_scene load_steps=8 format=3 uid="uid://dumkome4htpm5"]

[ext_resource type="Script" path="res://Scripts/SpaceShooter/enemy_shotgunner.gd" id="1_qs3to"]
[ext_resource type="Shader" path="res://Shaders/SpaceShooter/enemy_shotgunner.gdshader" id="2_liein"]
[ext_resource type="Texture2D" uid="uid://ca2ut0ltvmq6m" path="res://Sprites/white.png" id="3_8luch"]
[ext_resource type="Shader" path="res://Shaders/SpaceShooter/bullet.gdshader" id="4_yx5c4"]
[ext_resource type="Script" path="res://Scripts/SpaceShooter/char_bullets.gd" id="5_rhx0d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fh1g1"]
resource_local_to_scene = true
shader = ExtResource("2_liein")
shader_parameter/color = Vector3(1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_djmw8"]
shader = ExtResource("4_yx5c4")
shader_parameter/bullet_color = null

[node name="EnemyShotgunner" type="Area2D"]
collision_layer = 3
collision_mask = 2
script = ExtResource("1_qs3to")
color = Color(0.901961, 0.427451, 0.298039, 1)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 38, 35, 12, 21, -31, -23, -31, -38, 12)

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_fh1g1")
texture = ExtResource("3_8luch")

[node name="ShootTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="EnemyBullets" type="Node2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_djmw8")
script = ExtResource("5_rhx0d")
BULLET_COUNT = 50
speed = 300.0
sprite_scale = 0.15
bullet_color = Color(0.901961, 0.427451, 0.298039, 1)

[node name="HitTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
